# multilingual-lexical-analyser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: demosetup.sh  detokenise_demo.py  tokenise_demo.py
examples/: README.md
examples/societal-impact/: comparison.md  education_english.lua  education_mandarin.lua  education_spanish.lua  impact_statement.md
languages/: spanish.json
src/multilang_lexer/: __init__.py  cli.py  detokenizer.py  exceptions.py  languages.py  lexer.py  lexer_state.py  repl.py  tokenizer.py  tokens.py
src/multilang_lexer/languages/: english.json  mandarin.json  spanish.json
tests/: __init__.py  test_detokenizer.py  test_integration_code_structures.py  test_integration_edge_cases.py  test_integration_errors.py  test_integration_multilang.py  test_integration_numbers.py  test_integration_operators_identifiers.py  test_integration_parsing.py  test_integration_strings.py  test_integration_workflows.py  test_languages.py  test_lexer.py  test_lexer_state.py  test_tokenizer.py  test_tokens.py
